# data-structure

./: .gitignore  C language.md  CMakeLists.txt  README.md  main.c  run.sh  text.c
include/: binary_tree.h  link.h  link_queue.h  link_stack.h  list.h  queue.h  queue_chained.h  stack.h  static_link.h  string.h
src/: CMakeLists.txt  binary_tree.c  link.c  link_queue.c  link_stack.c  list.c  queue.c  queue_chained.c  stack.c  static_link.c  string.c
test/: CMakeLists.txt  test.c  test.h
text/: text.c  text.h
